package org.project.parsing;

public class Atom {
}
