@startuml
'https://plantuml.com/class-diagram

class Lexer
class Parser
class Interpreter

abstract class TreeNode
class Atom
class SExpression

class PrimitiveFunctions
class SymbolPatterns

Parser "uses" ..> TreeNode

TreeNode <|-- "inherits" Atom
TreeNode <|-- "inherits" SExpression
SExpression "contains" o--> Atom

class TreeNode {
    # tokens : ArrayList<String>
    + isList () : Boolean
    + evaluate() : TreeNode
    + toString() : String
    + create ( ArrayList<String> ) : TreeNode
    + create ( boolean ) : TreeNode
    + create ( int ) : TreeNode

}

class Atom {
    - value : String
    + toString() : String
}

class SExpression {
    'Talvez los tokens no sen necesarios'
    # tokens : ArrayList<String>
    - childNodes : ArrayList<TreeNode>
    + toString() : String
    - isValid(String) : boolean
}

class PrimitiveFunctions{
   + SUM( SExpression )
   + SUBTRACTION( SExpression )
   + DIVISION( SExpression )
   + MULTIPLICATION( SExpression )
   + CAR ( SExpression )
   + CDR ( SExpression )
   + SETQ ( SExpression )
   + COND ( SExpression )
   + QUOTE ( SExpression )
   + ATOM ( SExpression )
   + DEFUN ( SExpression )

}
@enduml